--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,14 +9,18 @@
   <body>
 
     <div>
+      <%= link_to 'Users', :users %>
+      <%= link_to 'Tips', :tips %>
+
       <% if current_user %>
+        <%= current_user.email %>
+
         <% if current_user.uid %>
           <%= current_user.uid %>
         <% else %>
           <%= link_to 'Authorize Stripe', user_omniauth_authorize_path(:stripe_connect) %>
         <% end %>
-
-        <%= current_user.email %>
+        
         <%= link_to 'Sign Out', destroy_user_session_path, method: :delete %>
       <% else %>
         <%= link_to 'Sign Up', new_user_registration_path %>
