--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -3,5 +3,5 @@
   <%= user.uid %>
   Given: <%= user.tips_given.sum(:amount) %>
   Received: <%= user.tips_received.sum(:amount) %>
-  <%= render partial: 'tips/form', locals: {tip: user.tips_received.new} %>
+  <%= render partial: 'tips/form', locals: {tip: user.tips_received.new} unless user == current_user %>
 </div>
