add some semantic-ish classes to views

--- a/app/views/tips/_form.html.haml
+++ b/app/views/tips/_form.html.haml
@@ -1,4 +1,5 @@
 = form_for tip do |f|
   = f.hidden_field :tippee_id
+  = f.label :amount, '$'
   = f.number_field :amount, min: 0
   = f.submit :tip
