--- a/app/views/tips/_tip.html.haml
+++ b/app/views/tips/_tip.html.haml
@@ -1,5 +1,5 @@
-%div
-  = tip.amount
-  = render tip.tipper
+.tip
+  .amount $#{tip.amount}
+  .tipper= render tip.tipper
   to
-  = render tip.tippee
+  .tippee= render tip.tippee
