--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,10 +1,7 @@
-%h1= @user.email
-%div= @user.uid
-%div
-  %h2
-    Given: #{@user.tips_given.sum(:amount)}
-  %div= render @user.tips_given
-%div
-  %h2
-    Received: #{@user.tips_received.sum(:amount)}
-  %div= render @user.tips_received
+.user
+  %h1= @user.email
+  %p= @user.uid
+  %h2 Given: #{@user.tips_given.sum(:amount)}
+  .tips.given= render @user.tips_given
+  %h2 Received: #{@user.tips_received.sum(:amount)}
+  .tips.received= render @user.tips_received
