--- a/app/views/layouts/_auth.html.haml
+++ b/app/views/layouts/_auth.html.haml
@@ -2,7 +2,7 @@
   %ul
     - if current_user
       %li= render current_user
-      - if not current_user.uid
+      - if not current_user.stripe_public_key
         %li= link_to 'Authorize Stripe', user_omniauth_authorize_path(:stripe_connect)
       %li= link_to 'Sign Out', destroy_user_session_path, method: :delete
     - else
