--- a/app/views/tips/_form.html.haml
+++ b/app/views/tips/_form.html.haml
@@ -2,4 +2,6 @@
   = f.hidden_field :tippee_id
   = f.label :amount, '$'
   = f.number_field :amount, min: 0
-  = f.submit :tip
+  = f.submit :tip, class: 'stripe-checkout', data: {key:         tip.tippee.stripe_public_key,
+                                                    description: "Tipping #{tip.tippee.email}",
+                                                    name:        'StripeConnectDemo'}
